--- a/app/static/theme/variables.less
+++ b/app/static/theme/variables.less
@@ -2,6 +2,7 @@
 
 @primary-color: #66ffcc; // 全局主色
 @link-color: #66ffcc; // 链接色
+@btn-primary-bg: #66ffcc; // 按钮色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
